# CRM_Shopify

./: .gitignore  README.md  README_DEPLOY.md  app.py  check_dependencies.py  init_streamlit.py  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml  secrets.toml
src/automacao_assistente_loja_shopify_whatsapp_crm_dashboard/: crew.py  main.py
src/automacao_assistente_loja_shopify_whatsapp_crm_dashboard/config/: agents.yaml  tasks.yaml
src/automacao_assistente_loja_shopify_whatsapp_crm_dashboard/dashboard/: README.md  app.py
