[project]
name = "automacao_assistente_loja_shopify_whatsapp_crm_dashboard"
version = "0.1.0"
description = "automacao_assistente_loja_shopify_whatsapp_crm_dashboard using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
automacao_assistente_loja_shopify_whatsapp_crm_dashboard = "automacao_assistente_loja_shopify_whatsapp_crm_dashboard.main:run"
run_crew = "automacao_assistente_loja_shopify_whatsapp_crm_dashboard.main:run"
train = "automacao_assistente_loja_shopify_whatsapp_crm_dashboard.main:train"
replay = "automacao_assistente_loja_shopify_whatsapp_crm_dashboard.main:replay"
test = "automacao_assistente_loja_shopify_whatsapp_crm_dashboard.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
